generated/GLFW3.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwDestroyCursor")]
            internal static extern void GlfwDestroyCursor_0(global::System.IntPtr cursor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetCursor")]
            internal static extern void GlfwSetCursor_0(global::System.IntPtr window, global::System.IntPtr cursor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetKeyCallback")]
            internal static extern global::System.IntPtr GlfwSetKeyCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetCharCallback")]
            internal static extern global::System.IntPtr GlfwSetCharCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetCharModsCallback")]
            internal static extern global::System.IntPtr GlfwSetCharModsCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetMouseButtonCallback")]
            internal static extern global::System.IntPtr GlfwSetMouseButtonCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetCursorPosCallback")]
            internal static extern global::System.IntPtr GlfwSetCursorPosCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetCursorEnterCallback")]
            internal static extern global::System.IntPtr GlfwSetCursorEnterCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetScrollCallback")]
            internal static extern global::System.IntPtr GlfwSetScrollCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetDropCallback")]
            internal static extern global::System.IntPtr GlfwSetDropCallback_0(global::System.IntPtr window, global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwJoystickPresent")]
            internal static extern int GlfwJoystickPresent_0(int joy);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetJoystickAxes")]
            internal static extern float* GlfwGetJoystickAxes_0(int joy, int* count);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetJoystickButtons")]
            internal static extern byte* GlfwGetJoystickButtons_0(int joy, int* count);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetJoystickName")]
            internal static extern global::System.IntPtr GlfwGetJoystickName_0(int joy);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetJoystickCallback")]
            internal static extern global::System.IntPtr GlfwSetJoystickCallback_0(global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetClipboardString")]
            internal static extern void GlfwSetClipboardString_0(global::System.IntPtr window, [MarshalAs(UnmanagedType.LPStr)] string @string);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetClipboardString")]
            internal static extern global::System.IntPtr GlfwGetClipboardString_0(global::System.IntPtr window);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetTime")]
            internal static extern double GlfwGetTime_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetTime")]
            internal static extern void GlfwSetTime_0(double time);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetTimerValue")]
            internal static extern ulong GlfwGetTimerValue_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetTimerFrequency")]
            internal static extern ulong GlfwGetTimerFrequency_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwMakeContextCurrent")]
            internal static extern void GlfwMakeContextCurrent_0(global::System.IntPtr window);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetCurrentContext")]
            internal static extern global::System.IntPtr GlfwGetCurrentContext_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSwapBuffers")]
            internal static extern void GlfwSwapBuffers_0(global::System.IntPtr window);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSwapInterval")]
            internal static extern void GlfwSwapInterval_0(int interval);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwExtensionSupported")]
            internal static extern int GlfwExtensionSupported_0([MarshalAs(UnmanagedType.LPStr)] string extension);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetProcAddress")]
            internal static extern global::System.IntPtr GlfwGetProcAddress_0([MarshalAs(UnmanagedType.LPStr)] string procname);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwVulkanSupported")]
            internal static extern int GlfwVulkanSupported_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetRequiredInstanceExtensions")]
            internal static extern sbyte** GlfwGetRequiredInstanceExtensions_0(uint* count);
        }

        // <remarks>
        // <para>  This function initializes the GLFW library.  Before most GLFW functions can</para>
        // <para>  be used, GLFW must be initialized, and before an application terminates GLFW</para>
        // <para>  should be terminated in order to free any resources allocated during or</para>
        // <para>  after initialization.</para>
        // <para>  If this function fails, it calls </para>
        // <para>  succeeds, you should call </para>
        // <para>  Additional calls to this function after successful initialization but before</para>
        // <para>  termination will return `GLFW_TRUE` immediately.</para>
        // </remarks>
        // <returns>
        // <para>`GLFW_TRUE` if successful, or `GLFW_FALSE` if an</para>
        // <para>[error](</para>
        // <para></para>
        // <para>Possible errors include</para>
        // <para></para>
        // <para></para>
        // <para>_safety This function must only be called from the main thread.</para>
        // </returns>
        public static int GlfwInit()
        {
            var __ret = __Internal.GlfwInit_0();
            return __ret;
        }

        // <remarks>
        // <para>  This function destroys all remaining windows and cursors, restores any</para>
        // <para>  modified gamma ramps and frees any other allocated resources.  Once this</para>
        // <para>  function is called, you must again call </para>
        // <para>  you will be able to use most GLFW functions.</para>
        // <para>  If GLFW has been successfully initialized, this function should be called</para>
        // <para>  before the application exits.  If initialization fails, there is no need to</para>
        // <para>  call this function, as it is called by </para>
        // <para>  failure.</para>
        // <para>  </para>
        // <para>Possible errors include </para>
        // <para>  </para>
        // <para>  </para>
        // <para>  </para>
        // <para>This function must not be called from a callback.</para>
        // <para>  </para>
        // <para>_safety This function must only be called from the main thread.</para>
        // </remarks>
        public static void GlfwTerminate()
        {
            __Internal.GlfwTerminate_0();
        }
